--- a/src/assets/scss/_initialize.scss
+++ b/src/assets/scss/_initialize.scss
@@ -8,6 +8,16 @@
     padding: 2.5rem 1.3rem;
   }
 }
+@include min-screen(map-get($breakpoints, lg)) {
+  .modal-lg {
+    max-width: 880px;
+  }
+}
+@include min-screen(map-get($breakpoints, xl)) {
+  .modal-lg {
+    max-width: 1100px;
+  }
+}
 
 i {
   &.fa {
